# automona

./: .flake8  .gitignore  .pylintrc  CONTRIBUTING.md  README.md  pyproject.toml
automona/: drivers.py  handle_drive.py  main.py  tasks.py
automona/handledriver/: __init__.py  handle_drive.py
automona/tasks/: __init__.py  productivity.py
tests/: __init__.py
